<resources>
    <string name="app_name">Experiência Gourmet</string>
    <string name="menu_cart">Carrinho</string>
    <string name="appetizer">Entrada</string>
    <string name="main_course">Prato Principal</string>
    <string name="dessert">Sobremesa</string>
    <string name="drinks">Bebidas</string>
    <string name="all_meals">Cardápio Completo</string>
    <string name="time_to_prepare">Tempo de preparo:</string>
    <string name="minutes">%1$s minutos</string>
    <string name="currency">R$ %1$s</string>
    <string name="hint_your_observations_here">Insira suas observações aqui</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="add_to_cart">Adicionar ao carrinho</string>
    <string name="dish_details_total">%1$s x R$ %2$s = R$ %3$s</string>
    <string name="placeholder">placeholder</string>
    <string name="menu">Cardápio</string>
    <string name="edit">Editar</string>
    <string name="exclude">Excluir</string>
    <string name="card_cart_item_quantity">%1$s x</string>
    <string name="total">Total:</string>
    <string name="buy">Finalizar pedido</string>
    <string name="sucess_buy">Pedido realizado com sucesso</string>
    <string name="update_request">Atualizar pedido</string>
</resources>